--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <title>Audovia</title>
     <link href="favicon.ico" rel="icon" type="image/x-icon">
     <meta content="Donald G Gray" name="author">
-    <meta content="Audovia is an Open Source application for making music." name="description">
+    <meta content="Audovia is a database application for making music with up to 15 instrumental voices and a percussion track." name="description">
     <meta property="og:image" content="http://audovia.com/image/Kelpies1280.jpg">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Audovia">
-    <meta property="og:description" content="Audovia is an Open Source
+    <meta property="og:description" content="Audovia is a database
       application for making music with up to 15 instrumental voices and
       a percussion track.">
     <style type="text/css">
