--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <title>Audovia</title>
     <link href="favicon.ico" rel="icon" type="image/x-icon">
     <meta content="Donald G Gray" name="author">
-    <meta content="Audovia is a database application for making music with up to 15 instrumental voices and a percussion track." name="description">
+    <meta content="Audovia uses JFugue MusicString notation to let you make music with up to 15 instrumental voices and a percussion track." name="description">
     <meta property="og:image" content="http://audovia.com/image/Kelpies1280.jpg">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Audovia">
-    <meta property="og:description" content="Audovia is a database
-      application for making music with up to 15 instrumental voices and
+    <meta property="og:description" content="Audovia uses JFugue MusicString notation to let you make music with up to 15 instrumental voices and
       a percussion track.">
     <style type="text/css">
       body {background-color: #FFFFFF; color: #000000; background-image: url("image/Kelpies1280balanced.jpg"); background-position: 50% 12%; background-repeat: no-repeat;}
