--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <span class="fullsize"><span style="font-weight: bold;"><em>Audovia</em></span> uses JFugue MusicString notation to let you make music with
       up to 15 instrumental voices and a percussion track.&nbsp;
       You can export your songs to MIDI, MusicXML or WAV.&nbsp; The WAV files can be opened in <a class="nounderline" href="http://audacityteam.org/" target="_blank">Audacity</a>
-      and exported to MP3.
+      and exported to MP3.&nbsp; <span style="font-weight: bold;"><em>Audovia</em></span> requires <a class="nounderline" href="http://java.com/" target="_blank">Java</a> to be installed.
       </span>
     </div>
 
