--- a/index_Kelpies.html
+++ b/index_Kelpies.html
@@ -12,7 +12,7 @@
     <meta property="og:description" content="Audovia uses JFugue MusicString notation to let you make music with up to 15 instrumental voices and
       a percussion track.">
     <style type="text/css">
-      body {background-color: #FFFFFF; color: #000000; background-image: url("image/Clouds.jpg"); background-position: 50% 12%; background-repeat: no-repeat;}
+      body {background-color: #FFFFFF; color: #000000; background-image: url("image/Kelpies1280balanced.jpg"); background-position: 50% 12%; background-repeat: no-repeat;}
       a:link {color: #551A8B;}
       a:visited {color: #551A8B;}
       a:active {color: #EE0000;}
@@ -27,7 +27,7 @@
       span.song {color: #551A8B; cursor: pointer; font-family: Verdana;}
       span.xml {color: #551A8B; cursor: pointer; font-family: Verdana;}
       span.title {color: #817F73; font-family: Verdana; font-size: small;}
-      span.body {color: #555555; font-family: Verdana; font-size: medium; line-height: 1.3;}
+      span.body {color: #555555; font-family: Verdana; font-size: 15px; line-height: 1.3;}
       span.fullsize {color: #000000; font-family: Verdana; font-size: medium;}
       td.heading {background-color: transparent;}
       td.background {background-color: transparent;}
@@ -79,10 +79,10 @@
         </tr>
       </tbody>
     </table>
-    <div style="position: absolute; left: 56%; top: 145px;">
+    <div style="position: absolute; left: 56%; top: 130px;">
       <iframe style="border-style: none;" src="playlist.html" height="200" width="460"></iframe>
     </div>
-    <div style="position: absolute; left: 53%; top: 380px;">
+    <div style="position: absolute; left: 53%; top: 365px;">
       <span class="fullsize"><em>Audovia 3.1.1 for Microsoft Windows</em>&nbsp;</span>
       <a href="https://bintray.com/artifact/download/songbuilder/generic/installAudovia-3-1-1.msi"
         style="text-decoration:none;">
@@ -92,25 +92,11 @@
       </a>
     </div>
 
-    <div style="width: 460px; background-color: #ffffff; opacity: 0.5; margin-left: -500px; position: absolute; top: 160px; left: 50%;  border: 8px solid white;">
+    <div style="width: 980px; background-color: #ffffff; opacity: 0.5; margin: auto; position: absolute; top: 620px; left: 0px; right: 0px; border: 8px solid white;">
       <span class="fullsize"><span style="font-weight: bold;"><em>Audovia</em></span> uses JFugue MusicString notation to let you make music with
-	        up to 15 instrumental voices and a percussion track.<br><br>
-	        You can export your songs to MIDI, MusicXML or WAV.<br><br> The WAV files can be opened in <a class="nounderline" href="http://audacityteam.org/" target="_blank">Audacity</a>
-	        and exported to MP3.<br><br> <span style="font-weight: bold;"><em>Audovia</em></span> requires <a class="nounderline" href="http://java.com/" target="_blank">Java</a> to be installed.
-	        <br><br>
-	        <em>Features:</em>
-	        <ul>
-	          <li>Database structure for quick and easy editing.<br><br></li>
-	          <li>Song backup and restore via XML.<br><br></li>
-	          <li>JFugue extension for string constants.<br><br></li>
-	          <li>Shared database support for MySQL.</li>
-	        </ul>
-      </span>
-    </div>
-
-    <div align="center" style=" margin: auto; position: absolute; top: 660px; left: 0px; right: 0px;">
-      <span class="body"><em>Copyright © 2016&nbsp;&nbsp;
-                                Donald G Gray</em>
+      up to 15 instrumental voices and a percussion track.&nbsp;
+      You can export your songs to MIDI, MusicXML or WAV.&nbsp; The WAV files can be opened in <a class="nounderline" href="http://audacityteam.org/" target="_blank">Audacity</a>
+      and exported to MP3.&nbsp; <span style="font-weight: bold;"><em>Audovia</em></span> requires <a class="nounderline" href="http://java.com/" target="_blank">Java</a> to be installed.
       </span>
     </div>
 
