--- a/index.html
+++ b/index.html
@@ -79,10 +79,12 @@
         </tr>
       </tbody>
     </table>
-    <div style="position: absolute; left: 56%; top: 145px;">
+
+    <div style="position: absolute; left: 50%; margin-left: 70px; top: 145px;">
       <iframe style="border-style: none;" src="playlist.html" height="200" width="460"></iframe>
     </div>
-    <div style="position: absolute; left: 53%; top: 380px;">
+
+    <div style="position: absolute; left: 50%; margin-left: 50px; top: 370px;">
       <span class="fullsize"><em>Audovia 3.1.1 for Microsoft Windows</em>&nbsp;</span>
       <a href="https://bintray.com/artifact/download/songbuilder/generic/installAudovia-3-1-1.msi"
         style="text-decoration:none;">
@@ -101,6 +103,7 @@
 	        <em>Features:</em>
 	        <ul>
 	          <li>Database structure for quick and easy editing.<br><br></li>
+	          <li>Note entry manual or by picking from graphic Treble, Alto, Tenor or Bass staves.<br><br></li>
 	          <li>Song backup and restore via XML.<br><br></li>
 	          <li>JFugue extension for string constants.<br><br></li>
 	          <li>Shared database support for MySQL.</li>
@@ -108,7 +111,13 @@
       </span>
     </div>
 
-    <div align="center" style=" margin: auto; position: absolute; top: 660px; left: 0px; right: 0px;">
+    <div style="width: 300px; margin-left: 84px; position: absolute; top: 436px; left: 50%; ">
+      <img title="Songs"
+                alt="Songs" src="image/SBSSongs.png"
+                style="border: 0px solid; width: 250px; height: 192px;" align="left">
+    </div>
+
+    <div align="center" style=" margin: auto; position: absolute; top: 700px; left: 0px; right: 0px;">
       <span class="body"><em>Copyright © 2016&nbsp;&nbsp;
                                 Donald G Gray</em>
       </span>
