--- a/piobaireachd_practice.html
+++ b/piobaireachd_practice.html
@@ -18,8 +18,8 @@
   </head>
 
   <body>
-    <table width="300" border="0" cellpadding="4" cellspacing="0" id="playlist" style="line-height: 1.0;">
-    </table>
+    <div id="playlist">
+    </div>
 
     <div id="audio">
     </div>
@@ -64,7 +64,7 @@
     ']}';
 
     var obj = JSON.parse(text);
-    var table_content = '<tbody>';
+    var table_content = '<table width="300" border="0" cellpadding="4" cellspacing="0" style="line-height: 1.0;"><tbody>';
     var audio_content = '';
 
     for (i = 0; i < obj.songs.length; i++)
@@ -90,7 +90,7 @@
       audio_content += '<audio id="audio' + i + '" onended="onEnd(songArray[' + i + '], audioArray[' + i + '])" src="music/' + obj.songs[i].mp3 + '"></audio>';
     }
 
-    table_content += '</tbody>';
+    table_content += '</tbody></table>';
     document.getElementById("playlist").innerHTML = table_content;
     document.getElementById("audio").innerHTML = audio_content;
 
