--- a/playlist.html
+++ b/playlist.html
@@ -17,8 +17,8 @@
   </head>
 
   <body>
-    <table width="450" border="0" cellpadding="4" id="playlist">
-    </table>
+    <div id="playlist">
+    </div>
 
     <div id="audio">
     </div>
@@ -34,7 +34,7 @@
     ']}';
 
     var obj = JSON.parse(text);
-    var table_content = '<tbody>';
+    var table_content = '<table width="450" border="0" cellpadding="4"><tbody>';
     var audio_content = '';
 
     for (i = 0; i < obj.songs.length; i++)
@@ -48,7 +48,7 @@
       audio_content += '<audio id="audio' + i + '" onended="onEnd(songArray[' + i + '], audioArray[' + i + '])" src="music/' + obj.songs[i].mp3 + '"></audio>';
     }
 
-    table_content += '</tbody>';
+    table_content += '</tbody></table>';
     document.getElementById("playlist").innerHTML = table_content;
     document.getElementById("audio").innerHTML = audio_content;
 
