--- a/playlist.html
+++ b/playlist.html
@@ -11,8 +11,8 @@
     <meta property="og:title" content="Playlist">
     <meta property="og:description" content="Audio playlist where the song titles change colour when they are played or paused.">
     <style type="text/css">
-      span.composer {color: #817F73; font-family: Verdana;}
-      span.song {color: #551A8B; cursor: pointer; font-family: Verdana;}
+      span.composer {color: #817F73; font-family: Verdana; font-size: 16px;}
+      span.song {color: #551A8B; cursor: pointer; font-family: Verdana; font-size: 16px;}
     </style>
   </head>
 
