--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       span.xml {color: #551A8B; cursor: pointer; font-family: Verdana;}
       span.title {color: #817F73; font-family: Verdana; font-size: small;}
       span.body {color: #555555; font-family: Verdana; font-size: 14px; line-height: 1.3;}
-      span.fullsize {color: #000000; font-family: Verdana; font-size: medium;}
+      span.fullsize {color: #000000; font-family: Verdana; font-size: 15px; line-height: 1.3;}
       td.heading {background-color: transparent;}
       td.background {background-color: transparent;}
     </style>
