--- a/index_clouds.html
+++ b/index_clouds.html
@@ -12,7 +12,7 @@
     <meta property="og:description" content="Audovia uses JFugue MusicString notation to let you make music with up to 15 instrumental voices and
       a percussion track.">
     <style type="text/css">
-      body {background-color: #E8CCFF;}
+      body {background-color: #FFFFFF; color: #000000; background-image: url("image/Clouds.jpg"); background-position: 50% 12%; background-repeat: no-repeat;}
       a:link {color: #551A8B;}
       a:visited {color: #551A8B;}
       a:active {color: #EE0000;}
