--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <iframe style="border-style: none;" src="playlist.html" height="210" width="460"></iframe>
     </div>
 
-    <div style="position: absolute; left: 50%; margin-left: 50px; top: 370px;">
+    <div style="width: 460px; position: absolute; left: 50%; margin-left: 50px; top: 370px;">
       <span class="fullsize"><em>Audovia 3.1.1 for Microsoft Windows</em>&nbsp;</span>
       <a href="https://bintray.com/artifact/download/songbuilder/generic/installAudovia-3-1-1.msi"
         style="text-decoration:none;">
