--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
               rel="publisher" target="_blank"
               style="text-decoration:none; display:inline-block; color:#333; text-align:center;
               font:13px/16px arial,sans-serif; white-space:nowrap;">
-              <span style="display:inline-block; font-weight:bold; vertical-align:top; margin-right:5px;
+              <!--<span style="display:inline-block; font-weight:bold; vertical-align:top; margin-right:5px;
                 margin-top:8px;">
               </span>
               <span style="display:inline-block; vertical-align:top; margin-right:15px;
                 margin-top:8px;">
-              </span>
+              </span>-->
               <img src="http://ssl.gstatic.com/images/icons/gplus-32.png"
                 alt="Google+" style="border:0; width:32px; height:32px;">
             </a>
