--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <iframe style="border-style: none;" src="playlist.html" height="210" width="460"></iframe>
     </div>
 
-    <div style="width: 460px; position: absolute; left: 50%; margin-left: 50px; top: 370px;">
+    <!--<div style="width: 460px; position: absolute; left: 50%; margin-left: 50px; top: 370px;">
       <span class="fullsize"><em>Audovia 3.1.2 for Microsoft Windows</em>&nbsp;</span>
       <a href="https://bintray.com/artifact/download/songbuilder/generic/installAudovia-3-1-2.msi"
         style="text-decoration:none;">
@@ -92,7 +92,7 @@
           <font face="Verdana" color="#551A8B"><big><b>Download</b></big></font>
         </button>
       </a>
-    </div>
+    </div>-->
 
     <div style="width: 460px; background-color: #ffffff; opacity: 0.6; margin-left: -486px; position: absolute; top: 160px; left: 50%;  border: 8px solid white;">
       <span class="fullsize"><span style="font-weight: bold;"><em>Audovia</em></span> uses JFugue MusicString notation to let you make music with
