--- a/index.html
+++ b/index.html
@@ -94,6 +94,16 @@
       </a>
     </div>-->
 
+    <div style="width: 400px; position: absolute; left: 50%; margin-left: 84px; top: 400px;">
+      <span class="fullsize"><em>The Linux version of Audovia is available from the Ubuntu Software Center or from our Personal Package Archive:<br><br></em></span>
+      <a href="https://launchpad.net/~t-9nfo-b/+archive/ubuntu/audovia" target="_blank"
+        style="text-decoration:none;">
+        <button type="button" style="background-color:#eeeeee; padding:5px; cursor:pointer">
+          <font face="Verdana" color="#551A8B"><big><b>launchpad.net</b></big></font>
+        </button>
+      </a>
+    </div>
+
     <div style="width: 460px; background-color: #ffffff; opacity: 0.6; margin-left: -486px; position: absolute; top: 160px; left: 50%;  border: 8px solid white;">
       <span class="fullsize"><span style="font-weight: bold;"><em>Audovia</em></span> uses JFugue MusicString notation to let you make music with
 	        up to 15 instrumental voices and a percussion track.<br><br>
@@ -111,14 +121,14 @@
       </span>
     </div>
 
-    <div style="width: 300px; margin-left: 84px; position: absolute; top: 436px; left: 50%; ">
+    <!--<div style="width: 300px; margin-left: 84px; position: absolute; top: 436px; left: 50%; ">-->
      <!-- <img title="Songs"
                 alt="Songs" src="image/SBSSongs.png"
                 style="border: 0px solid; width: 250px; height: 192px;" align="left"> -->
 
-      <iframe src="https://player.vimeo.com/video/149954239?title=0&byline=0&portrait=0" width="250" height="192" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+      <!--<iframe src="https://player.vimeo.com/video/149954239?title=0&byline=0&portrait=0" width="250" height="192" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
-    </div>
+    </div>-->
 
     <div align="center" style=" margin: auto; position: absolute; top: 700px; left: 0px; right: 0px;">
       <span class="body"><em>Copyright © 2016&nbsp;&nbsp;
