--- a/index.html
+++ b/index.html
@@ -84,17 +84,17 @@
       <iframe style="border-style: none;" src="playlist.html" height="210" width="460"></iframe>
     </div>
 
-    <!--<div style="width: 460px; position: absolute; left: 50%; margin-left: 50px; top: 370px;">
-      <span class="fullsize"><em>Audovia 3.1.2 for Microsoft Windows</em>&nbsp;</span>
+    <div style="width: 400px; position: absolute; left: 50%; margin-left: 84px; top: 390px;">
+      <span class="fullsize"><em>Audovia 3.1.2 for Microsoft Windows:<br><br></em></span>
       <a href="https://bintray.com/artifact/download/songbuilder/generic/installAudovia-3-1-2.msi"
         style="text-decoration:none;">
         <button type="button" style="background-color:#eeeeee; padding:5px; cursor:pointer">
           <font face="Verdana" color="#551A8B"><big><b>Download</b></big></font>
         </button>
       </a>
-    </div>-->
+    </div>
 
-    <div style="width: 400px; position: absolute; left: 50%; margin-left: 84px; top: 400px;">
+    <div style="width: 400px; position: absolute; left: 50%; margin-left: 84px; top: 500px;">
       <span class="fullsize"><em>The Linux version of Audovia is available from the Ubuntu Software Center or from our Personal Package Archive:<br><br></em></span>
       <a href="https://launchpad.net/~t-9nfo-b/+archive/ubuntu/audovia" target="_blank"
         style="text-decoration:none;">
