--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     </div>
 
     <div style="width: 400px; position: absolute; left: 50%; margin-left: 84px; top: 390px;">
-      <span class="fullsize"><em>Audovia 3.1.2 for Microsoft Windows:<br><br></em></span>
+      <span class="fullsize"><em>Audovia 3.1.2 for Microsoft Windows 10:<br><br></em></span>
       <a href="https://bintray.com/artifact/download/songbuilder/generic/installAudovia-3-1-2.msi"
         style="text-decoration:none;">
         <button type="button" style="background-color:#eeeeee; padding:5px; cursor:pointer">
