--- a/index.html
+++ b/index.html
@@ -108,15 +108,15 @@
       <span class="fullsize"><span style="font-weight: bold;"><em>Audovia</em></span> uses JFugue MusicString notation to let you make music with
 	        up to 15 instrumental voices and a percussion track.<br><br>
 	        You can export your songs to MIDI, MusicXML or WAV.<br><br> The WAV files can be opened in <a class="nounderline" href="http://audacityteam.org/" target="_blank">Audacity</a>
-	        and exported to MP3.<br><br> <span style="font-weight: bold;"><em>Audovia</em></span> requires <a class="nounderline" href="http://java.com/" target="_blank">Java</a> to be installed.
-	        <br><br>
+	        and exported to MP3.<br><br>
 	        <em>Features:</em>
 	        <ul>
 	          <li>Database structure for quick and easy editing.<br><br></li>
 	          <li>Note entry manual or by picking from graphic Treble, Alto, Tenor or Bass staves.<br><br></li>
 	          <li>Song backup and restore via XML.<br><br></li>
 	          <li>JFugue extension for string constants.<br><br></li>
-	          <li>Shared database support for MySQL.</li>
+	          <li>Shared database support for MySQL.<br><br></li>
+	          <li>Requires <a class="nounderline" href="http://java.com/" target="_blank">Java</a> to be installed.</li>
 	        </ul>
       </span>
     </div>
