--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 	        <em>Features:</em>
 	        <ul>
 	          <li>Database structure for quick and easy editing.<br><br></li>
-	          <li>Notes can be entered manually or by picking from graphic Treble, Alto, Tenor or Bass staves.<br><br></li>
+	          <li>Notes can be entered manually or by picking from graphic Treble, Alto, Tenor and Bass staves.<br><br></li>
 	          <li>Song backup and restore via XML.<br><br></li>
 	          <li>JFugue extension for string constants.<br><br></li>
 	          <li>Shared database support for MySQL.<br><br></li>
