--- a/index.html
+++ b/index.html
@@ -107,12 +107,12 @@
     <div style="width: 460px; background-color: #ffffff; opacity: 0.6; margin-left: -486px; position: absolute; top: 160px; left: 50%;  border: 8px solid white;">
       <span class="fullsize"><span style="font-weight: bold;"><em>Audovia</em></span> uses JFugue MusicString notation to let you make music with
 	        up to 15 instrumental voices and a percussion track.<br><br>
+	        Notes can be entered manually or by picking from graphic Treble, Alto, Tenor and Bass staves.<br><br>
 	        You can export your songs to MIDI, MusicXML or WAV.<br><br> The WAV files can be opened in <a class="nounderline" href="http://audacityteam.org/" target="_blank">Audacity</a>
 	        and exported to MP3.<br><br>
 	        <em>Features:</em>
 	        <ul>
 	          <li>Database structure for quick and easy editing.<br><br></li>
-	          <li>Notes can be entered manually or by picking from graphic Treble, Alto, Tenor and Bass staves.<br><br></li>
 	          <li>Song backup and restore via XML.<br><br></li>
 	          <li>JFugue extension for string constants.<br><br></li>
 	          <li>Shared database support for MySQL.<br><br></li>
