--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       span.song {color: #551A8B; cursor: pointer; font-family: Verdana;}
       span.xml {color: #551A8B; cursor: pointer; font-family: Verdana;}
       span.title {color: #817F73; font-family: Verdana; font-size: small;}
+      span.subtitle {color: #551A8B; font-family: Verdana; font-size: 14px; line-height: 2.2;}
       span.body {color: #555555; font-family: Verdana; font-size: 14px; line-height: 1.3;}
       span.fullsize {color: #000000; font-family: Verdana; font-size: 15px; line-height: 1.3;}
       td.heading {background-color: transparent;}
@@ -52,7 +53,8 @@
           <td style=" vertical-align: top;">
             <div class="centre">
               <span class="header" style="font-family: Trebuchet MS;">Make Music with Audovia</span>
-              <br>
+              <span class="subtitle"><br><em>database application for making music using JFugue MusicStrings</em></span>
+              <!--<br>-->
             </div>
           </td>
           <td style=" vertical-align: top; text-align: right; width: 180px;">
