--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
       span.fullsize {color: #000000; font-family: Verdana; font-size: 15px; line-height: 1.3;}
       td.heading {background-color: transparent;}
       td.background {background-color: transparent;}
+      li:not(:last-child) {margin-bottom: 8px;}
+      p {margin-top: 0px; margin-bottom: 16px;}
     </style>
   </head>
   <body>
@@ -106,18 +108,36 @@
       </a>
     </div>
 
-    <div style="width: 460px; background-color: #ffffff; opacity: 0.6; margin-left: -486px; position: absolute; top: 160px; left: 50%;  border: 8px solid white;">
-      <span class="fullsize"><span style="font-weight: bold;"><em>Audovia</em></span> uses JFugue MusicString notation to let you make music with
-	        up to 15 instrumental voices and a percussion track.<br><br>
-	        Notes can be entered manually or by picking from graphic Treble, Alto, Tenor and Bass staves.<br><br>
-	        You can export your songs to MIDI, MusicXML or WAV.<br><br> The WAV files can be opened in <a class="nounderline" href="http://audacityteam.org/" target="_blank">Audacity</a>
-	        and exported to MP3.<br><br>
+    <div style="width: 500px; background-color: #ffffff; opacity: 0.6; margin-left: -486px; position: absolute; top: 160px; left: 50%;  border: 8px solid white;">
+      <span class="fullsize">
+      <!--<p>
+      <span style="font-weight: bold;"><em>Audovia</em></span> uses JFugue MusicString notation to let you make music with
+	        up to 15 instrumental voices and a percussion track.
+	  </p>-->
+	  <p>
+	  <!--Make music on your Microsoft Windows or Linux laptop or PC with <span style="font-weight: bold;"><em>Audovia</em></span>.&nbsp;-->
+	  Make music with up to 15 instrumental voices and a percussion track with instruments chosen from a soundbank of 128 instruments.&nbsp;
+	  Either the default soundbank or one of your own can be used.
+	  </p>
+	  <p>
+	  Songs can be developed, tested and edited very quickly and easily by virtue of the database structure and the JFugue MusicString notation.
+	  </p>
+	  <p>
+	        Notes can be entered manually or by picking from graphic Treble, Alto, Tenor and Bass staves.
+	  </p>
+	  <p>
+	        You can export your songs to MIDI, MusicXML or WAV.
+	  </p>
+	  <p>
+	        The WAV files can be opened in <a class="nounderline" href="http://audacityteam.org/" target="_blank">Audacity</a>
+	        and exported to MP3.
+	  </p>
 	        <em>Features:</em>
 	        <ul>
-	          <li>Database structure for quick and easy editing.<br><br></li>
-	          <li>Song backup and restore via XML.<br><br></li>
-	          <li>JFugue extension for string constants.<br><br></li>
-	          <li>Shared database support for MySQL.<br><br></li>
+	          <!--<li>Database structure for quick and easy editing;</li>-->
+	          <li>Song backup and restore via XML;</li>
+	          <li>JFugue extension for string constants;</li>
+	          <li>Shared database support for MySQL;</li>
 	          <li>Requires <a class="nounderline" href="http://java.com/" target="_blank">Java</a> to be installed.</li>
 	        </ul>
       </span>
