--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       span.subtitle {color: #551A8B; font-family: Verdana; font-size: 14px; line-height: 2.2;}
       span.body {color: #555555; font-family: Verdana; font-size: 14px; line-height: 1.3;}
       span.fullsize {color: #000000; font-family: Verdana; font-size: 15px; line-height: 1.3;}
+      span.text {color: #555555; font-family: Verdana; font-size: 15px; line-height: 1.3;}
       td.heading {background-color: transparent;}
       td.background {background-color: transparent;}
       li:not(:last-child) {margin-bottom: 8px;}
@@ -108,8 +109,9 @@
       </a>
     </div>
 
-    <div style="width: 500px; background-color: #ffffff; opacity: 0.6; margin-left: -486px; position: absolute; top: 160px; left: 50%;  border: 8px solid white;">
-      <span class="fullsize">
+    <!--<div style="width: 500px; background-color: #ffffff; opacity: 0.6; margin-left: -486px; position: absolute; top: 160px; left: 50%;  border: 8px solid white;">-->
+    <div style="width: 500px; background-color: #ffffff;  margin-left: -486px; position: absolute; top: 160px; left: 50%;  border: 8px solid white;">
+      <span class="text">
       <!--<p>
       <span style="font-weight: bold;"><em>Audovia</em></span> uses JFugue MusicString notation to let you make music with
 	        up to 15 instrumental voices and a percussion track.
