--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       p {margin-top: 0px; margin-bottom: 16px;}
     </style>
   </head>
-  <body>
+  <body style="background-color: #ffffff;">
     <table style="width: 980px; text-align: left; margin-left: auto;
       margin-right: auto;" border="0" cellpadding="4" cellspacing="0">
       <tbody>
@@ -85,7 +85,7 @@
       </tbody>
     </table>
 
-    <div style="position: absolute; left: 50%; margin-left: 70px; top: 145px;">
+    <div style="position: absolute; left: 50%; margin-left: 70px; top: 154px;">
       <iframe style="border-style: none;" src="playlist.html" height="210" width="460"></iframe>
     </div>
 
@@ -110,7 +110,7 @@
     </div>
 
     <!--<div style="width: 500px; background-color: #ffffff; opacity: 0.6; margin-left: -486px; position: absolute; top: 160px; left: 50%;  border: 8px solid white;">-->
-    <div style="width: 500px; background-color: #ffffff;  margin-left: -486px; position: absolute; top: 160px; left: 50%;  border: 8px solid white;">
+    <div style="width: 500px; background-color: #ffffff;  margin-left: -494px; position: absolute; top: 160px; left: 50%;  border: 8px solid white;">
       <span class="text">
       <!--<p>
       <span style="font-weight: bold;"><em>Audovia</em></span> uses JFugue MusicString notation to let you make music with
@@ -118,14 +118,14 @@
 	  </p>-->
 	  <p>
 	  <!--Make music on your Microsoft Windows or Linux laptop or PC with <span style="font-weight: bold;"><em>Audovia</em></span>.&nbsp;-->
-	  Make music with up to 15 instrumental voices and a percussion track with instruments chosen from a soundbank of 128 instruments.&nbsp;
+	  Make music on your laptop or PC with up to 15 instrumental voices and a percussion track with instruments chosen from a soundbank of 128 instruments.&nbsp;
 	  Either the default soundbank or one of your own can be used.
 	  </p>
 	  <p>
 	  Songs can be developed, tested and edited very quickly and easily by virtue of the database structure and the JFugue MusicString notation.
 	  </p>
 	  <p>
-	        Notes can be entered manually or by picking from graphic Treble, Alto, Tenor and Bass staves.
+	        Notes are specified by their name and octave or by their MIDI value and they can be entered manually or by picking from graphic Treble, Alto, Tenor and Bass staves.
 	  </p>
 	  <p>
 	        You can export your songs to MIDI, MusicXML or WAV.
