--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
 	  </p>-->
 	  <p>
 	  <!--Make music on your Microsoft Windows or Linux laptop or PC with <span style="font-weight: bold;"><em>Audovia</em></span>.&nbsp;-->
-	  Make music on your laptop or PC with up to 15 instrumental voices and a percussion track with instruments chosen from a soundbank of 128 instruments.&nbsp;
-	  Either the default soundbank or one of your own can be used.
+	  The songs here were produced using Audovia which lets you make music with up to 15 instrumental voices and a percussion track.&nbsp; Instruments can be chosen from the default soundbank containing 128 instruments or
+	  from any other soundbank of your choice.
 	  </p>
 	  <p>
 	  Songs can be developed, tested and edited very quickly and easily by virtue of the database structure and the JFugue MusicString notation.
