--- a/index_plain.html
+++ b/index_plain.html
@@ -85,11 +85,11 @@
       </tbody>
     </table>
 
-    <div style="position: absolute; left: 50%; margin-left: -500px; top: 154px;">
+    <div style="position: absolute; left: 50%; margin-left: 70px; top: 154px;">
       <iframe style="border-style: none;" src="playlist.html" height="210" width="460"></iframe>
     </div>
 
-    <div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 390px;">
+    <div style="width: 400px; position: absolute; left: 50%; margin-left: 84px; top: 390px;">
       <span class="fullsize"><em>Audovia 3.1.5 for Microsoft Windows 10:<br><br></em></span>
       <a href="https://bintray.com/artifact/download/songbuilder/generic/installAudovia-3-1-5.msi"
         style="text-decoration:none;">
@@ -99,7 +99,7 @@
       </a>
     </div>
 
-    <div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 500px;">
+    <div style="width: 400px; position: absolute; left: 50%; margin-left: 84px; top: 500px;">
       <span class="fullsize"><em>The Linux version of Audovia is available from the Ubuntu Software Center or from our Personal Package Archive:<br><br></em></span>
       <a href="https://launchpad.net/~t-9nfo-b/+archive/ubuntu/audovia" target="_blank"
         style="text-decoration:none;">
@@ -110,7 +110,7 @@
     </div>
 
     <!--<div style="width: 500px; background-color: #ffffff; opacity: 0.6; margin-left: -486px; position: absolute; top: 160px; left: 50%;  border: 8px solid white;">-->
-    <div style="width: 500px; background-color: #ffffff;  margin-left: -18px; position: absolute; top: 160px; left: 50%;  border: 8px solid white;">
+    <div style="width: 500px; background-color: #ffffff;  margin-left: -494px; position: absolute; top: 160px; left: 50%;  border: 8px solid white;">
       <span class="text">
       <!--<p>
       <span style="font-weight: bold;"><em>Audovia</em></span> uses JFugue MusicString notation to let you make music with
@@ -118,7 +118,7 @@
 	  </p>-->
 	  <p>
 	  <!--Make music on your Microsoft Windows or Linux laptop or PC with <span style="font-weight: bold;"><em>Audovia</em></span>.&nbsp;-->
-	  These songs were produced using Audovia which lets you make music with up to 15 instrumental voices and a percussion track.&nbsp; Instruments can be chosen from the default soundbank containing 128 instruments or
+	  The songs here were produced using Audovia which lets you make music with up to 15 instrumental voices and a percussion track.&nbsp; Instruments can be chosen from the default soundbank containing 128 instruments or
 	  from any other soundbank of your choice.
 	  </p>
 	  <p>
