--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 	  </p>-->
 	  <p>
 	  <!--Make music on your Microsoft Windows or Linux laptop or PC with <span style="font-weight: bold;"><em>Audovia</em></span>.&nbsp;-->
-	  These songs were produced using Audovia which lets you make music with up to 15 instrumental voices and a percussion track.&nbsp; Instruments can be chosen from the default soundbank containing 128 instruments or
+	  These songs were produced using Audovia which lets you make music with up to fifteen instrumental voices and a percussion track.&nbsp; Instruments can be chosen from the default soundbank containing 128 instruments or
 	  from any other soundbank of your choice.
 	  </p>
 	  <p>
