--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <title>Audovia</title>
     <link href="favicon.ico" rel="icon" type="image/x-icon">
     <meta content="Donald G Gray" name="author">
-    <meta content="Audovia uses JFugue MusicString notation to let you make music with up to 15 instrumental voices and a percussion track." name="description">
+    <meta content="Audovia uses JFugue MusicString notation to let you make music with up to fifteen instrumental voices and a percussion track." name="description">
     <meta property="og:image" content="http://audovia.com/image/Kelpies1280.jpg">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Audovia">
-    <meta property="og:description" content="Audovia uses JFugue MusicString notation to let you make music with up to 15 instrumental voices and
+    <meta property="og:description" content="Audovia uses JFugue MusicString notation to let you make music with up to fifteen instrumental voices and
       a percussion track.">
     <style type="text/css">
       body {background-color: #E8CCFF;}
@@ -90,8 +90,8 @@
     </div>
 
     <div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 390px;">
-      <span class="fullsize"><em>Audovia 3.1.5 for Microsoft Windows 10:<br><br></em></span>
-      <a href="https://bintray.com/artifact/download/songbuilder/generic/installAudovia-3-1-5.msi"
+      <span class="fullsize"><em>Audovia 3.1.6 for Microsoft Windows 10:<br><br></em></span>
+      <a href="https://bintray.com/artifact/download/songbuilder/generic/installAudovia-3-1-6.msi"
         style="text-decoration:none;">
         <button type="button" style="background-color:#eeeeee; padding:5px; cursor:pointer">
           <font face="Verdana" color="#551A8B"><big><b>Download</b></big></font>
