--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
 	        The WAV files can be opened in <a class="nounderline" href="http://audacityteam.org/" target="_blank">Audacity</a>
 	        and exported to MP3.
 	  </p>
+	  <p>
 	        <em>Features:</em>
 	        <ul>
 	          <!--<li>Database structure for quick and easy editing;</li>-->
@@ -142,6 +143,10 @@
 	          <li>Shared database support for MySQL;</li>
 	          <li>Requires <a class="nounderline" href="http://java.com/" target="_blank">Java</a> to be installed.</li>
 	        </ul>
+	  </p>
+	  <p>
+	     Do you play the Great Highland Bagpipe?&nbsp; If so, please visit <a class="nounderline" href="http://chanterpractice.com/" target="_blank">Chanter&nbsp;Practice</a>.
+	  </p>
       </span>
     </div>
 
@@ -154,9 +159,9 @@
 
     </div>-->
 
-    <div align="center" style=" margin: auto; position: absolute; top: 700px; left: 0px; right: 0px;">
+    <div align="center" style=" margin: auto; position: absolute; top: 730px; left: 0px; right: 0px;">
       <span class="body"><em>Copyright © 2016&nbsp;&nbsp;
-                                Donald G Gray</em>
+                                Donald G Gray</em><br>&nbsp;
       </span>
     </div>
 
