--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 	        </ul>
 	  </p>
 	  <p>
-	     Do you play the Great Highland Bagpipe?&nbsp; If so, please visit <a class="nounderline" href="http://chanterpractice.com/" target="_blank">Chanter&nbsp;Practice</a>.
+	     <em>Do you play the Great Highland Bagpipe?<br>If so, please visit <a class="nounderline" href="http://chanterpractice.com/" target="_blank">Chanter&nbsp;Practice</a>.</em>
 	  </p>
       </span>
     </div>
