--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
         </tr>
         <tr>
           <td style="vertical-align: top; width: 180px;">
-            <a href="doc/AudoviaDocumentation-3-2.pdf" target="_blank">
-              <img title="Documentation"
-                alt="Song Builder Icon" src="image/SongBuilderColourIcon96.png"
-                style="border: 0px solid; width: 74px; height: 74px;" align="left"></a>
+            <!--<a href="doc/AudoviaDocumentation-3-2.pdf" target="_blank">-->
+              <img title="Audovia Icon"
+                alt="Audovia Icon" src="image/SongBuilderColourIcon96.png"
+                style="border: 0px solid; width: 74px; height: 74px;" align="left"><!--</a>-->
           </td>
           <td style=" vertical-align: top;">
             <div class="centre">
@@ -142,11 +142,12 @@
 	          <li>JFugue extension for string constants;</li>
 	          <li>Shared database support for MySQL;</li>
 	          <li>Requires <a class="nounderline" href="http://java.com/" target="_blank">Java</a> to be installed.</li>
+	          <li>Comprehensive <a class="nounderline" href="doc/AudoviaDocumentation-3-2.pdf" target="_blank">Documentation</a>.</li>
 	        </ul>
 	  </p>
-	  <p>
+	  <!--<p>
 	     <em>Do you play the Great Highland Bagpipe?&nbsp; If so,<br>please visit <a class="nounderline" href="http://chanterpractice.com/" target="_blank">Chanter&nbsp;Practice</a>.</em>
-	  </p>
+	  </p>-->
       </span>
     </div>
 
@@ -159,8 +160,10 @@
 
     </div>-->
 
-    <div align="center" style=" margin: auto; position: absolute; top: 730px; left: 0px; right: 0px;">
-      <span class="body"><em>Copyright © 2016&nbsp;&nbsp;
+    <div align="center" style=" margin: auto; position: absolute; top: 700px; left: 0px; right: 0px;">
+      <span class="body">
+      <em>Do you play the Great Highland Bagpipe?&nbsp; If so, please visit <a class="nounderline" href="http://chanterpractice.com/" target="_blank">Chanter&nbsp;Practice</a>.</em><br><br>
+      <em>Copyright © 2016&nbsp;&nbsp;
                                 Donald G Gray</em><br>&nbsp;
       </span>
     </div>
