--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     </div>
 
     <div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 500px;">
-      <span class="fullsize"><em>The Linux version of Audovia is available from the Ubuntu Software Center or from our Personal Package Archive:<br><br></em></span>
+      <span class="fullsize"><em>The Linux Ubuntu version of Audovia is available from our Personal Package Archive:<br><br></em></span>
       <a href="https://launchpad.net/~t-9nfo-b/+archive/ubuntu/audovia" target="_blank"
         style="text-decoration:none;">
         <button type="button" style="background-color:#eeeeee; padding:5px; cursor:pointer">
