--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       span.subheader {font-family: Perpetua; font-size: 22px;}
       span.invite {color: #555555; font-family: Verdana; font-size: 15px;}
       span.composer {color: #817F73; font-family: Verdana;}
+      span.terminal {color: #555555; font-family: Verdana;}
       span.song {color: #551A8B; cursor: pointer; font-family: Verdana;}
       span.xml {color: #551A8B; cursor: pointer; font-family: Verdana;}
       span.title {color: #817F73; font-family: Verdana; font-size: small;}
@@ -89,7 +90,7 @@
       <iframe style="border-style: none;" src="playlist.html" height="210" width="460"></iframe>
     </div>
 
-    <div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 390px;">
+    <div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 380px;">
       <span class="fullsize"><em>Audovia 3.2 for Microsoft Windows 10:<br><br></em></span>
       <a href="https://bintray.com/artifact/download/songbuilder/generic/installAudovia-3-2.msi"
         style="text-decoration:none;">
@@ -99,7 +100,7 @@
       </a>
     </div>
 
-    <div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 500px;">
+    <div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 480px;">
       <span class="fullsize"><em>The Linux Ubuntu version of Audovia is available from our Personal Package Archive:<br><br></em></span>
       <a href="https://launchpad.net/~t-9nfo-b/+archive/ubuntu/audovia" target="_blank"
         style="text-decoration:none;">
@@ -107,6 +108,12 @@
           <font face="Verdana" color="#551A8B"><big><b>launchpad.net</b></big></font>
         </button>
       </a>
+    </div>
+
+    <div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 600px;">
+      <span class="fullsize"><em><p>Or, if you have Ubuntu 16.04, you can install a "sandboxed" version by typing the following command at the terminal:</p></em></span>
+      <span class="terminal"><p>&nbsp;&nbsp;&nbsp;&nbsp;sudo snap install audovia</p></span>
+
     </div>
 
     <!--<div style="width: 500px; background-color: #ffffff; opacity: 0.6; margin-left: -486px; position: absolute; top: 160px; left: 50%;  border: 8px solid white;">-->
@@ -160,7 +167,7 @@
 
     </div>-->
 
-    <div align="center" style=" margin: auto; position: absolute; top: 700px; left: 0px; right: 0px;">
+    <div align="center" style=" margin: auto; position: absolute; top: 740px; left: 0px; right: 0px;">
       <span class="body">
       <em>Do you play the Great Highland Bagpipe?&nbsp; If so, please visit <a class="nounderline" href="http://chanterpractice.com/" target="_blank">Chanter&nbsp;Practice</a>.</em><br><br>
       <em>Copyright © 2016&nbsp;&nbsp;
