--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
     <div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 380px;">
       <span class="fullsize"><em>Audovia 3.2 for Microsoft Windows 10:<br><br></em></span>
-      <a href="https://bintray.com/artifact/download/songbuilder/generic/installAudovia-3-2.msi"
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://bintray.com/artifact/download/songbuilder/generic/installAudovia-3-2.msi"
         style="text-decoration:none;">
         <button type="button" style="background-color:#eeeeee; padding:5px; cursor:pointer">
           <font face="Verdana" color="#551A8B"><big><b>Download</b></big></font>
@@ -102,7 +102,7 @@
 
     <div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 480px;">
       <span class="fullsize"><em>The Linux Ubuntu version of Audovia is available from our Personal Package Archive:<br><br></em></span>
-      <a href="https://launchpad.net/~t-9nfo-b/+archive/ubuntu/audovia" target="_blank"
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://launchpad.net/~t-9nfo-b/+archive/ubuntu/audovia" target="_blank"
         style="text-decoration:none;">
         <button type="button" style="background-color:#eeeeee; padding:5px; cursor:pointer">
           <font face="Verdana" color="#551A8B"><big><b>launchpad.net</b></big></font>
