--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     </div>
 
     <!--<div style="width: 500px; background-color: #ffffff; opacity: 0.6; margin-left: -486px; position: absolute; top: 160px; left: 50%;  border: 8px solid white;">-->
-    <div style="width: 510px; background-color: #ffffff;  margin-left: -28px; position: absolute; top: 160px; left: 50%;  border: 8px solid white;">
+    <div style="width: 530px; background-color: #ffffff;  margin-left: -48px; position: absolute; top: 160px; left: 50%;  border: 8px solid white;">
       <span class="text">
       <!--<p>
       <span style="font-weight: bold;"><em>Audovia</em></span> uses JFugue MusicString notation to let you make music with
@@ -152,6 +152,16 @@
 	          <li>Comprehensive <a class="nounderline" href="doc/AudoviaDocumentation-3-2.pdf" target="_blank">Documentation</a>.</li>
 	        </ul>
 	  </p>
+
+	  <p>
+	        <em>Quick start:</em>
+	        <ul>
+
+	          <li>File/XML Import/open Demo folder, select a song and import;</li>
+	          <li>File/Tree View/select "Song", press Play, then Default Soundbank.</li>
+	        </ul>
+	  </p>
+
 	  <!--<p>
 	     <em>Do you play the Great Highland Bagpipe?&nbsp; If so,<br>please visit <a class="nounderline" href="http://chanterpractice.com/" target="_blank">Chanter&nbsp;Practice</a>.</em>
 	  </p>-->
@@ -167,7 +177,7 @@
 
     </div>-->
 
-    <div align="center" style=" margin: auto; position: absolute; top: 740px; left: 0px; right: 0px;">
+    <div align="center" style=" margin: auto; position: absolute; top: 770px; left: 0px; right: 0px;">
       <span class="body">
       <em>Do you play the Great Highland Bagpipe?&nbsp; If so, please visit <a class="nounderline" href="http://chanterpractice.com/" target="_blank">Chanter&nbsp;Practice</a>.</em><br><br>
       <em>Copyright © 2016&nbsp;&nbsp;
