--- a/index.html
+++ b/index.html
@@ -155,11 +155,11 @@
 
 	  <p>
 	        <em>Quick start:</em>
-	        <ul>
+	        <ol>
 
-	          <li>File/XML Import/open Demo folder, select a song and import;</li>
-	          <li>File/Tree View/select "Song", press Play, then Default Soundbank.</li>
-	        </ul>
+	          <li style="font-weight: bold;"><span style="font-weight: normal;">File/XML Import/open Demo folder, select a song and import;</span></li>
+	          <li style="font-weight: bold;"><span style="font-weight: normal;">File/Tree View/select "Song", press Play, then Default Soundbank.</span></li>
+	        </ol>
 	  </p>
 
 	  <!--<p>
