--- a/index.html
+++ b/index.html
@@ -110,11 +110,11 @@
       </a>
     </div>
 
-    <div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 600px;">
+    <!--<div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 600px;">
       <span class="fullsize"><em><p>Or, if you have Ubuntu 16.04, you can install a "sandboxed" version by typing the following command at the terminal:</p></em></span>
       <span class="terminal"><p>&nbsp;&nbsp;&nbsp;&nbsp;sudo snap install audovia</p></span>
 
-    </div>
+    </div>-->
 
     <!--<div style="width: 500px; background-color: #ffffff; opacity: 0.6; margin-left: -486px; position: absolute; top: 160px; left: 50%;  border: 8px solid white;">-->
     <div style="width: 550px; background-color: #ffffff;  margin-left: -68px; position: absolute; top: 160px; left: 50%;  border: 8px solid white;">
