--- a/index.html
+++ b/index.html
@@ -108,7 +108,14 @@
           <font face="Verdana" color="#551A8B"><big><b>launchpad.net</b></big></font>
         </button>
       </a>
+<br><br><br><br>
+      <img title="Treble clef"
+	                  alt="Treble clef" src="image/Treble.png"
+                style="border: 0px solid;" align="left">
+
     </div>
+
+
 
     <!--<div style="width: 400px; position: absolute; left: 50%; margin-left: -486px; top: 600px;">
       <span class="fullsize"><em><p>Or, if you have Ubuntu 16.04, you can install a "sandboxed" version by typing the following command at the terminal:</p></em></span>
