--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
         </button>
       </a>
 <br><br><br><br>
-      <img title="Treble clef"
-	                  alt="Treble clef" src="image/Treble.png"
+      <img title="Treble stave"
+	                  alt="Treble stave" src="image/Treble.png"
                 style="border: 0px solid;" align="left">
 
     </div>
